// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepoSettingsLogsPage should render correctly when there are no recorded commands 1`] = `
<DocumentFragment>
  <div
    class="container mb-3"
  >
    <div>
      <h2
        class="h2 heading"
      >
        <span
          class="wrapper breadcrumb"
        >
          <span
            class="path"
          >
            <span
              class="text"
            >
              Logs and activities
            </span>
          </span>
        </span>
      </h2>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="wildcardTabs tabContainer"
      data-orientation="horizontal"
      data-reach-tabs=""
      data-testid="wildcard-tabs"
    >
      <div
        class="tablistWrapper"
      >
        <div
          aria-orientation="horizontal"
          class="tabList"
          data-reach-tab-list=""
          data-testid="wildcard-tab-list"
          role="tablist"
        >
          <button
            aria-controls="tabs--11--panel--0"
            aria-selected="true"
            class="medium"
            data-orientation="horizontal"
            data-reach-tab=""
            data-selected=""
            data-testid="wildcard-tab"
            id="tabs--11--tab--0"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="tabLabel"
            >
              Last repo commands
            </span>
          </button>
          <button
            aria-controls="tabs--11--panel--1"
            aria-selected="false"
            class="medium"
            data-orientation="horizontal"
            data-reach-tab=""
            data-testid="wildcard-tab"
            id="tabs--11--tab--1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="tabLabel"
            >
              Last sync output
            </span>
          </button>
        </div>
      </div>
      <div
        data-reach-tab-panels=""
        data-testid="wildcard-tab-panel-list"
      >
        <div
          aria-labelledby="tabs--11--tab--0"
          data-reach-tab-panel=""
          data-testid="wildcard-tab-panel"
          id="tabs--11--panel--0"
          role="tabpanel"
          tabindex="0"
        >
          <div
            aria-label="recorded commands"
          >
            <p
              class="my-2"
            >
              No recorded commands yet.
            </p>
          </div>
        </div>
        <div
          aria-labelledby="tabs--11--tab--1"
          data-reach-tab-panel=""
          data-testid="wildcard-tab-panel"
          hidden=""
          id="tabs--11--panel--1"
          role="tabpanel"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepoSettingsLogsPage should render correctly when there are recorded commands 1`] = `
<DocumentFragment>
  <div
    class="container mb-3"
  >
    <div>
      <h2
        class="h2 heading"
      >
        <span
          class="wrapper breadcrumb"
        >
          <span
            class="path"
          >
            <span
              class="text"
            >
              Logs and activities
            </span>
          </span>
        </span>
      </h2>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="wildcardTabs tabContainer"
      data-orientation="horizontal"
      data-reach-tabs=""
      data-testid="wildcard-tabs"
    >
      <div
        class="tablistWrapper"
      >
        <div
          aria-orientation="horizontal"
          class="tabList"
          data-reach-tab-list=""
          data-testid="wildcard-tab-list"
          role="tablist"
        >
          <button
            aria-controls="tabs--1--panel--0"
            aria-selected="true"
            class="medium"
            data-orientation="horizontal"
            data-reach-tab=""
            data-selected=""
            data-testid="wildcard-tab"
            id="tabs--1--tab--0"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="tabLabel"
            >
              Last repo commands
            </span>
          </button>
          <button
            aria-controls="tabs--1--panel--1"
            aria-selected="false"
            class="medium"
            data-orientation="horizontal"
            data-reach-tab=""
            data-testid="wildcard-tab"
            id="tabs--1--tab--1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="tabLabel"
            >
              Last sync output
            </span>
          </button>
        </div>
      </div>
      <div
        data-reach-tab-panels=""
        data-testid="wildcard-tab-panel-list"
      >
        <div
          aria-labelledby="tabs--1--tab--0"
          data-reach-tab-panel=""
          data-testid="wildcard-tab-panel"
          id="tabs--1--panel--0"
          role="tabpanel"
          tabindex="0"
        >
          <div
            aria-label="recorded commands"
          >
            <div
              class="commandNode"
            >
              <div
                class="commandNodeHeader"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    class="mdi-icon iconInline mr-1"
                    fill="currentColor"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
                    />
                  </svg>
                  <span
                    class="timestamp"
                  >
                    in over 17 years
                  </span>
                </div>
                <p
                  class=""
                />
                <div
                  class="commandNodeDurationGroup"
                >
                  <svg
                    aria-hidden="true"
                    class="mdi-icon iconInline mr-1"
                    fill="currentColor"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M11 7V13L16.2 16.1L17 14.9L12.5 12.2V7H11M20 12V18H22V12H20M20 20V22H22V20H20M18 20C16.3 21.3 14.3 22 12 22C6.5 22 2 17.5 2 12S6.5 2 12 2C16.8 2 20.9 5.4 21.8 10H19.7C18.8 6.6 15.7 4 12 4C7.6 4 4 7.6 4 12S7.6 20 12 20C14.4 20 16.5 18.9 18 17.3V20Z"
                    />
                  </svg>
                  <p
                    class="mb-0"
                  >
                    Ran in 10.91ms
                  </p>
                </div>
              </div>
              <span
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
              >
                Command:
              </span>
              <pre
                class="logs rounded p-3 mb-0 commandNodeLogOutput"
              >
                <code
                  class="code d-block"
                  role="code"
                  tabindex="0"
                >
                  git cat-file -t -- 4b825dc642cb6eb9a060e54bf8d69288fbee4904
                </code>
              </pre>
              <div
                class="commandNodeFooter"
              >
                <small
                  class="mt-2 mb-0"
                >
                  <span
                    class="font-weight-bold"
                  >
                    Shard:
                  </span>
                   127.0.0.1:3501
                </small>
                <small
                  class="mt-2 mb-0"
                >
                  <span
                    class="font-weight-bold"
                  >
                    Path:
                  </span>
                   /Users/randomuser/.sourcegraph/repos_1/gerrit.sgdev.org/a/gabe/repo/.git
                </small>
              </div>
            </div>
            <div
              class="commandNode"
            >
              <div
                class="commandNodeHeader"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    class="mdi-icon iconInline mr-1"
                    fill="currentColor"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
                    />
                  </svg>
                  <span
                    class="timestamp"
                  >
                    in over 17 years
                  </span>
                </div>
                <p
                  class=""
                />
                <div
                  class="commandNodeDurationGroup"
                >
                  <svg
                    aria-hidden="true"
                    class="mdi-icon iconInline mr-1"
                    fill="currentColor"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M11 7V13L16.2 16.1L17 14.9L12.5 12.2V7H11M20 12V18H22V12H20M20 20V22H22V20H20M18 20C16.3 21.3 14.3 22 12 22C6.5 22 2 17.5 2 12S6.5 2 12 2C16.8 2 20.9 5.4 21.8 10H19.7C18.8 6.6 15.7 4 12 4C7.6 4 4 7.6 4 12S7.6 20 12 20C14.4 20 16.5 18.9 18 17.3V20Z"
                    />
                  </svg>
                  <p
                    class="mb-0"
                  >
                    Ran in 10.10ms
                  </p>
                </div>
              </div>
              <span
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
              >
                Command:
              </span>
              <pre
                class="logs rounded p-3 mb-0 commandNodeLogOutput"
              >
                <code
                  class="code d-block"
                  role="code"
                  tabindex="0"
                >
                  git config --get sourcegraph.type
                </code>
              </pre>
              <div
                class="commandNodeFooter"
              >
                <small
                  class="mt-2 mb-0"
                >
                  <span
                    class="font-weight-bold"
                  >
                    Shard:
                  </span>
                   127.0.0.1:3501
                </small>
                <small
                  class="mt-2 mb-0"
                >
                  <span
                    class="font-weight-bold"
                  >
                    Path:
                  </span>
                   /Users/randomuser/.sourcegraph/repos_1/gerrit.sgdev.org/a/gabe/repo/.git
                </small>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="tabs--1--tab--1"
          data-reach-tab-panel=""
          data-testid="wildcard-tab-panel"
          hidden=""
          id="tabs--1--panel--1"
          role="tabpanel"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
